Fix spacing between content and collapsibles

--- a/css/equilibrium.css
+++ b/css/equilibrium.css
@@ -27,6 +27,7 @@
 
 .content {
     display: flex;
+    justify-content: space-between;
 }
 
 .content > div {
